--- a/manifest.json
+++ b/manifest.json
@@ -2,7 +2,7 @@
   "name": "Gym Tracker",
   "short_name": "Gym",
   "description": "Track your progress, achieve your goals",
-  "start_url": "/",
+  "start_url": "/mygym",
   "display": "standalone",
   "background_color": "#667eea",
   "theme_color": "#667eea",
